--- a/assets/styles/output.css
+++ b/assets/styles/output.css
@@ -534,32 +534,28 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.flex {
-  display: flex;
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
-.h-\[\] {
-  height: ;
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.flex {
+  display: flex;
 }
 
 .h-\[44px\] {
   height: 44px;
 }
 
-.w-\[\] {
-  width: ;
-}
-
-.w-\[20\] {
-  width: 20;
+.w-\[144px\] {
+  width: 144px;
 }
 
 .w-\[202px\] {
   width: 202px;
-}
-
-.w-\[144px\] {
-  width: 144px;
 }
 
 .flex-wrap {
@@ -578,58 +574,32 @@ video {
   justify-content: space-between;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
 .gap-3 {
   gap: 0.75rem;
 }
 
-.gap-4 {
-  gap: 1rem;
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .rounded-xl {
   border-radius: 0.75rem;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
-.border-\[1px\] {
-  border-width: 1px;
-}
-
 .border-2 {
   border-width: 2px;
 }
 
-.border {
-  border-width: 1px;
-}
-
 .border-solid {
   border-style: solid;
-}
-
-.border-\[\] {
-  border-color: ;
-}
-
-.border-\[1\] {
-  border-color: 1;
-}
-
-.border-\[gray\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(128 128 128 / var(--tw-border-opacity));
-}
-
-.border-\[\#E0DFE3\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(224 223 227 / var(--tw-border-opacity));
 }
 
 .border-\[\#4C867B\] {
@@ -637,18 +607,9 @@ video {
   border-color: rgb(76 134 123 / var(--tw-border-opacity));
 }
 
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-\[\#2F2B43\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(47 43 67 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#fff\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+.border-\[\#E0DFE3\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(224 223 227 / var(--tw-border-opacity));
 }
 
 .bg-\[\#33836E\] {
@@ -656,27 +617,13 @@ video {
   background-color: rgb(51 131 110 / var(--tw-bg-opacity));
 }
 
-.text-center {
-  text-align: center;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
+.bg-\[\#fff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .font-normal {
   font-weight: 400;
-}
-
-.text-red-700 {
-  --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-\[\#140A32\] {
@@ -684,7 +631,47 @@ video {
   color: rgb(20 10 50 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\] {
+  color: ;
+}
+
+.text-\[\#9694A0\] {
+  --tw-text-opacity: 1;
+  color: rgb(150 148 160 / var(--tw-text-opacity));
+}
+
 .hover\:text-\[\#33836E\]:hover {
   --tw-text-opacity: 1;
   color: rgb(51 131 110 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\]:hover {
+  color: ;
+}
+
+.hover\:text-\[\#\]:hover {
+  color: #;
+}
+
+.hover\:text-\[\#96\]:hover {
+  color: #96;
+}
+
+.hover\:text-\[\#9694\]:hover {
+  color: #9694;
+}
+
+.hover\:text-\[\#9694A0\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(150 148 160 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#a2a2a5\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(162 162 165 / var(--tw-text-opacity));
 }
